# MMSim

./: README.md  main.py  pyproject.toml
src/: main.py  microstructure_analysis.py  multi_realisation_sim.py
src/data/: import_data.py
src/plotting/: __init__.py  demo.py  dynamic_plotter.py  interactive_plots.py  market_plots.py  tda_plots.py
src/simulation/: __init__.py  market_simulator.py
src/topology/: persistence_homology.py
tests/: test_import_data.py
