[project]
name = "mmsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "giotto-tda>=0.6.2",
    "openbb>=4.1.3",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "yfinance>=0.2.66",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
